Reformat client.rb.sample.

--- a/client.rb.sample
+++ b/client.rb.sample
@@ -1,21 +1,25 @@
+# -*- mode: ruby; coding: utf-8; -*-
+
 # Sample chef client configuration file
 #
 # Instructions:
 #
-#     * Replace the node_name's 'macbook-pro-laptop' with a name for your machine. Since it is a roaming machine,
-#       it is NOT a good idea to let chef give it a node name based on its fully qualified domain name (FQDN).
+# Replace the node_name's 'macosx-node' with a name for your machine. If it is
+# a roaming machine, it is NOT a good idea to let chef give it a node name
+# based on its fully qualified domain name (FQDN).
 #
-# For a full list of options, see <http://docs.opscode.com/config_rb_client.html>.
+# For a full list of options, see
+# <http://docs.opscode.com/config_rb_client.html>.
 
 # Set a base directory that makes commands runnable by standard user.
 base_dir = "#{ENV['HOME']}/.chef"
 
-cache_options({:path => "#{base_dir}/cache/checksums", :skip_expires => true})
-chef_server_url        'https://api.opscode.com/organizations/sean_fisk'
-file_backup_path       "#{base_dir}/backup"
-file_cache_path        "#{base_dir}/cache"
-log_level              :info
-log_location           STDOUT
-node_name              'macbook-pro-laptop'
-node_path              "#{base_dir}/node"
+cache_options path: "#{base_dir}/cache/checksums", skip_expires: true
+chef_server_url 'https://api.opscode.com/organizations/sean_fisk'
+file_backup_path "#{base_dir}/backup"
+file_cache_path "#{base_dir}/cache"
+log_level :info
+log_location STDOUT
+node_name 'macosx-node'
+node_path "#{base_dir}/node"
 validation_client_name 'sean_fisk-validator'
