--- a/.editorconfig
+++ b/.editorconfig
@@ -9,15 +9,23 @@ root = true
 [*]
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-# 4-space indentation, UTF-8
-[*.{md,py,rb,rb.sample,yml}]
-indent_style = space
-indent_size = 4
 charset = utf-8
 
-# Tabbed indentation, 4-space representation, UTF-8
+# 2-space indentation
+[*.{rb,rb.sample,yml}]
+indent_style = space
+indent_size = 2
+
+[{Berksfile,Gemfile,Thorfile}]
+indent_style = space
+indent_size = 2
+
+# 4-space indentation
+[*.{md,py}]
+indent_style = space
+indent_size = 4
+
+# Tabbed indentation, 4-space representation
 [*.{ps1,xml,plist}]
 indent_style = tab
 indent_size = 4
-charset = utf-8
