--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ trim_trailing_whitespace = true
 charset = utf-8
 
 # 2-space indentation
-[*.{rb,rb.sample,yml}]
+[*.{rb,rb.sample,yml,js}]
 indent_style = space
 indent_size = 2
 
