--- a/config/windows/client.rb.sample
+++ b/config/windows/client.rb.sample
@@ -16,6 +16,8 @@ chef_server_url 'https://api.opscode.com/organizations/sean_fisk'
 # log_location (default: STDOUT) is a tty. We want more information.
 log_level :info
 node_name 'windows-node'
+policy_group 'windows'
+policy_name 'windows'
 validation_client_name 'sean_fisk-validator'
 
 # Verify all HTTPS connections (recommended)
