--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 cookbooks/macos_setup/files/mac_os_x/Network[[:space:]]Link[[:space:]]Conditioner/** filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
